Prevent vertical scrollbar causing infinite resize
On systems where the scrollbar affects the width of the DOM element, the
chart cards would enter an infinite rendering loop as they resized to
accommodate the space provided or left by the scrollbar appearing and
disappearing.

--- a/app/assets/sass/components/_card.scss
+++ b/app/assets/sass/components/_card.scss
@@ -44,6 +44,10 @@
 .card--inner {
   padding: 1rem;
   display: flex;
+
+  &.chart-card {
+    max-height: 280px;
+  }
 }
 
 .card--image {
